Modificacion en Program.cs (conexion), Class Componente (urlFoto), ultima revision previa a primer Migration

--- a/BackEndAPI/BackEndAPI/appsettings.json
+++ b/BackEndAPI/BackEndAPI/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
+  
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=PcBuilderDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "CadenaDeConnexion": "Server=localhost;Database=PcBuilderDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
