Error de actualizacion en las placasbases/se soluciono el error cors

--- a/FrontAngularProject/angular.json
+++ b/FrontAngularProject/angular.json
@@ -19,7 +19,10 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/favicon.ico",
+              "src/assets"
+              
             ],
             "styles": [
               "src/custom-theme.scss",
@@ -78,7 +81,9 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
